# FuzzyMatcher

./: CMakeLists.txt  README.md
src/: FuzzyMatcher.cpp  FuzzyMatcher.h
test/: test_FuzzyMatcher.cpp
